--- a/src/jsMain/resources/index.html
+++ b/src/jsMain/resources/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <div id="root"></div>
-<script src="demo-compose-web.js"></script>
+<script src="kotlin-fullstack-web-chat.js"></script>
 </body>
 </html>
